--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,13 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.10.3</version>
 		</dependency>
-		       
+		<!--  file upload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+				
 	</dependencies>
     <build>
         <plugins>
