--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.3.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.12.2</version>
+		</dependency>
 				
 	</dependencies>
     <build>
