--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,13 @@
 		    <artifactId>spring-context-support</artifactId>
 		    <version>${org.springframework-version}</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.12.2</version>
+		</dependency>
+		
 
 		<!-- Test -->
 		<dependency>
