--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,6 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
-	<repositories>
-		<repository>
-			<id>oracle</id>
-			<url>http://maven.jahia.org/maven2</url>
-		</repository>
-	</repositories>
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -127,10 +121,15 @@
 		    <version>2.0.4</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>2.5.4</version>
+		</dependency>
+		<!-- <dependency>
 		    <groupId>com.oracle</groupId>
 		    <artifactId>ojdbc6</artifactId>
 		    <version>11.2.0.3</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -154,8 +153,11 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.12.2</version>
 		</dependency>
-		
-
+		<dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
