배포 환경 추가했음
* 이전 코드(spring mvc) 삭제함

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<org.springframework-version>4.3.26.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -196,6 +197,7 @@
 				
 	</dependencies>
     <build>
+    	<finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
